# rust-learn

./: README.md
00_learning/: function  hello  (+2 more)
gentle_intro/: Cargo.toml  README.md  libfoo.rlib  sample.txt  test.txt
gentle_intro/src/: arrays_slices.rs  crates.rs  file_sys_proces.rs  file_sys_process.rs  file_sys_programs.rs  foo.rs  function_and_more.rs  interlude.rs  learn_date_time.rs  learn_json.rs  learn_regex.rs  learn_serde_json.rs  looping_ifying.rs  main.rs  modules.rs  option.rs  process_programs.rs  strings.rs  vectors.rs
gentle_intro/src/basic/: file_sys_programs.rs  function_and_more.rs  interlude.rs  iterators.rs  looping_ifying.rs  matching.rs  mod.rs  option.rs  reading_files.rs  strings.rs  vectors.rs
gentle_intro/src/boo/: mod.rs
gentle_intro/src/books_learning/: boxing_error.rs  error_handling_learn.rs  generics_type.rs  mod.rs  traits_rust.rs  wrapping_errors.rs
gentle_intro/src/greet/: mod.rs
gentle_intro/src/page_five/: containers_rust.md  iterator_methods.md  learn_maps.rs  learn_sets.rs  learn_vectors.rs  mod.rs
gentle_intro/src/page_seven/: borrow_checker.rs  channels.rs  higher_level.rs  mod.rs  multithreading.rs  shared_refs.rs
gentle_intro/src/page_six/: error_handling.rs  mod.rs  simple_error.rs
gentle_intro/src/page_tree/: crates.rs  file_path_directories.rs  file_reading.rs  learn_json.rs  learn_process.rs  learn_serde_json.rs  mod.rs  modules.rs
gentle_intro/src/page_two/: closures.rs  enums.rs  generic_functions.rs  generic_struct.rs  iterators_type.rs  mod.rs  struct_dynamic_data.rs  structs.rs  traits.rs  tuples.rs
(+100 files in other folders)
