[package]
name = "rust-gentle-intro"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
ferris-says = "0.3.1"
json = "0.12.4"
pipeliner = "1.0.1"
regex = "1.10.6"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
simple-error = "0.3.1"
time = "0.3.36"
toml = "0.8.19"
